# stationbench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: global_formatter.yaml  global_linter.yaml  lint.yml  tests.yml
docs/: README.md  setup.md  tutorial.ipynb
docs/guides/: custom_regions.md
stationbench/: .gitignore  __init__.py  calculate_metrics.py  cli.py  compare_forecasts.py  regions.py
stationbench/utils/: formatting.py  io.py  metrics.py  plotting.py  regions.py
tests/: conftest.py  test_api.py  test_calculate_metrics.py  test_cli.py  test_compare_forecasts.py  test_io.py  test_regions.py  utils.py
